tests/NormalTests/paczka1/fuzzy1/80540757.err
Error in line 4: LCrTk S853 -1,6
Error in line 6: Ufj7KJ5tX S853 81,46
Error in line 3: LCrTk S853 38,3
Error in line 11: Od0jxi4gyL8 S853 -1,6
Error in line 1: Od0jxi4gyL8 S853 38,5
Error in line 33: Od0jxi4gyL8 S387 43,8
